<resources>
    <string name="about">产品介绍</string>
    <string name="action_cancel">操作已取消</string>
    <string name="adaptation_dialog_tips">"因为系统及机型限制，可能无法正常播报。如果出现该情况，请关闭此功能。
继续启用？"</string>
    <string name="add">添加</string>
    <string name="added_to_download_list">已添加到下载列表</string>
    <string name="advice">帮助与反馈</string>
    <string name="app_install_fail">安装失败</string>
    <string name="app_install_success">安装成功</string>
    <string name="app_launch_tip">正在查询应用程序</string>
    <string name="app_name">咪咕灵犀</string>
    <string name="app_recommend">应用推荐</string>
    <string name="app_recommend_title">应用推荐</string>
    <string name="app_title">打开应用</string>
    <string name="audio_resource_no_network_tip">网络不给力，请稍后重试</string>
    <string name="audio_resource_play_error_tip">播放失败，请稍后重试</string>
    <string name="auth_btn_start">免费激活</string>
    <string name="auth_default_failure">激活不成功</string>
    <string name="auth_dialog_title">免费激活（暂只支持移动用户）</string>
    <string name="auth_net_failure">网络繁忙，请稍后再试吧，今天还能尝试%1$d次哦</string>
    <string name="auth_net_failure_count_over">网络繁忙，今天激活次数用完了，明天再试吧</string>
    <string name="auth_running_task">正在为您激活......预计10秒后完成</string>
    <string name="auth_sms_prefix">灵犀免费激活短信:</string>
    <string name="bdp_update_appsearch_involke_fail">使用百度手机助手升级失败，请重试</string>
    <string name="bdp_update_as_download_complete">百度手机助手下载完成</string>
    <string name="bdp_update_as_notify_tip">百度手机助手</string>
    <string name="bdp_update_as_notify_title">百度手机助手</string>
    <string name="bdp_update_download_complete">新版本下载完成，点击安装</string>
    <string name="bdp_update_install_file_not_exist">安装包已被删除</string>
    <string name="bdp_update_not_net_error">网络连接异常，请检查网络后重试</string>
    <string name="bdp_update_request_net_error">网络错误，请重试</string>
    <string name="bdp_update_tip_waiting">等待下载</string>
    <string name="bluetooth_dialog_title">灵犀</string>
    <string name="bluetooth_head_title">灵犀蓝牙耳机检测</string>
    <string name="bluetooth_start_detection_title">测试蓝牙耳机能否使用灵犀</string>
    <string name="both_notify_content">短信来电播报已开启</string>
    <string name="broadcast_format_category_contact">联系人播报</string>
    <string name="broadcast_format_category_name">来电称呼</string>
    <string name="broadcast_format_default_name">帅哥</string>
    <string name="broadcast_format_default_tip">试听一下</string>
    <string name="broadcast_format_select">您有电话来自张三</string>
    <string name="broadcast_privacy_add">添加隐私联系人</string>
    <string name="broadcast_privacy_contacts_audition_tip">点击试听</string>
    <string name="broadcast_privacy_contacts_auditioning_tip">试听中...</string>
    <string name="broadcast_privacy_contacts_loading">正在读取</string>
    <string name="broadcast_privacy_contacts_no_result">无联系人</string>
    <string name="broadcast_privacy_contacts_title">已选择%1$s个联系人</string>
    <string name="broadcast_privacy_empty_tip1">添加隐私联系人后，</string>
    <string name="broadcast_privacy_empty_tip2">来电不播报该联系人姓名</string>
    <string name="broadcast_privacy_title">隐私联系人</string>
    <string name="broadcast_times_select">1次</string>
    <string name="browser_exception_error">抱歉，打不开网页了</string>
    <string name="browser_exception_resion1">暂时没有网络信号或数据连接</string>
    <string name="browser_exception_resion2">此网页可能出现了故障或不存在</string>
    <string name="browser_exception_retry">刷新重试</string>
    <string name="browser_exception_set_net">设置网络</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_confirm">确 定</string>
    <string name="btn_hide_download">后台下载</string>
    <string name="btn_retry">重试</string>
    <string name="btn_retryshuo">再说一次</string>
    <string name="btn_setting">设置</string>
    <string name="btn_suggest_record_ok">说完了</string>
    <string name="btn_suggest_submit">提　交</string>
    <string name="btn_suggest_submit_retry">重新提交</string>
    <string name="btn_update">更 新</string>
    <string name="btn_update_no_traffic">零流量安装</string>
    <string name="caf_notification_input_tip">输入号码，免费查询话费流量</string>
    <string name="caf_notification_query">立即查询</string>
    <string name="call_broadcast_database_update_title">WiFi下自动更新号码识别库</string>
    <string name="call_broadcast_format_title">来电播报格式</string>
    <string name="call_broadcast_popup_summary">弹窗显示对方信息</string>
    <string name="call_broadcast_popup_title">通话弹窗</string>
    <string name="call_broadcast_privacy_summary">来电不播报联系人姓名</string>
    <string name="call_broadcast_privacy_title">来电不播报的联系人</string>
    <string name="call_broadcast_sound_summary">来电自动语音播报</string>
    <string name="call_broadcast_sound_title">来电播报</string>
    <string name="call_broadcast_times_title">来电播报次数</string>
    <string name="call_broadcast_tone_summary">该设置将更改您的手机铃声</string>
    <string name="call_broadcast_tone_title">来电播报铃声</string>
    <string name="call_broadcast_view_icon_off">已关闭</string>
    <string name="call_broadcast_view_icon_on">已开启</string>
    <string name="call_broadcast_view_shunfeng">顺丰快递员</string>
    <string name="call_notify_content">来电播报已开启</string>
    <string name="call_notify_pattern0">您有%1$s电话来自%2$s</string>
    <string name="call_notify_pattern1">%1$s%2$s给您打电话了</string>
    <string name="call_notify_pattern2">%1$s%2$s来电话了</string>
    <string name="call_notify_strange">陌生</string>
    <string name="call_sms_broadcast_disable_tip">您的手机无法支持此功能</string>
    <string name="call_sms_broadcast_sim_name_summary">卡名自动显示为运营商名称</string>
    <string name="call_sms_broadcast_sim_name_title">卡名智能显示</string>
    <string name="call_sms_broadcast_sim_title">电话短信默认卡设置</string>
    <string name="call_sms_broadcast_specific_summary">各地方言为您来电、来信播报</string>
    <string name="call_sms_broadcast_specific_title">方言播报</string>
    <string name="call_sms_broadcast_start_record_summary">点击下载语音包</string>
    <string name="call_sms_broadcast_start_record_title">灵犀语音包</string>
    <string name="cancel">取 消</string>
    <string name="cancel_schedule_edit">取消</string>
    <string name="carMode_manager">驾驶功能</string>
    <string name="car_mode_notification_close">关闭</string>
    <string name="car_mode_notification_have_closed">驾驶功能已关闭</string>
    <string name="car_mode_request_authfail">彩铃设置失败，请稍后重试</string>
    <string name="car_mode_setting">驾驶功能已开启，请在驾驶功能中设置</string>
    <string name="car_mode_short_prompt">本次行车时间较长，建议您休息一下，如果您已经没有开车了，您可以关闭驾驶功能</string>
    <string name="carmode_share_tips">开车也可以打电话发短信？！还可以来电播报！使用咪咕灵犀我的设备毫无压力！你也来体验体验吧。@灵犀官方微博http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.cmcc&amp;g_f=991802</string>
    <string name="check_res_version_title">正在获取下载地址</string>
    <string name="clear_schedule">清除</string>
    <string name="cnsms_download_tip">发短信还可以离线使用，试试下载无网络资源包让发短信更轻松。</string>
    <string name="cnsms_install_success_tip">无网络资源包安装成功</string>
    <string name="cnsms_res_download_content">下载后，您可以在离线时语音输入短信内容。该包大小为12M，建议在wifi环境下下载。</string>
    <string name="cnsms_res_unzip_title">安装无网络资源</string>
    <string name="cnsms_res_update_title">离线短信听写包</string>
    <string name="contact_receiver">姓名:</string>
    <string name="contact_save_back">返回</string>
    <string name="contact_save_confirm">保存</string>
    <string name="contact_type_phone">电话</string>
    <string name="cube_ptr_hours_ago"> 小时之前</string>
    <string name="cube_ptr_last_update">上次更新: </string>
    <string name="cube_ptr_load_complete">加载完成</string>
    <string name="cube_ptr_loading">加载中</string>
    <string name="cube_ptr_minutes_ago"> 分钟之前</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_pull_up_to_load">上拉加载</string>
    <string name="cube_ptr_refresh_complete">刷新完成</string>
    <string name="cube_ptr_refreshing">刷新中</string>
    <string name="cube_ptr_release_to_load">释放加载</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_seconds_ago"> 秒之前</string>
    <string name="custom_title_command">请说话</string>
    <string name="custom_title_contact">请说联系人</string>
    <string name="custom_title_network_exception">网络异常</string>
    <string name="custom_title_network_time_out">网络超时</string>
    <string name="custom_title_no_network">网络未打开，请检查网络设置</string>
    <string name="custom_title_no_network_news">网络异常，无法获取热门新闻</string>
    <string name="custom_title_no_network_weather">网络异常，无法获取天气信息</string>
    <string name="custom_title_no_result">抱歉，灵犀有点忙不过来了，请稍后再试吧</string>
    <string name="custom_title_recorder_error">录音初始化问题</string>
    <string name="custom_title_speech_init_error">服务初始化问题</string>
    <string name="custom_title_speech_out">没有听到声音</string>
    <string name="custom_title_vibrate">开启振动</string>
    <string name="delete_schedule">删除</string>
    <string name="dial_specific_broadcast_no_offline_tip">下载离线语音引擎，才能使用方言播报，建议您选择安装。</string>
    <string name="dial_specific_broadcast_no_offline_tip2">更新离线语音引擎，才能使用方言播报，建议您选择安装。</string>
    <string name="dial_specific_broadcast_tip">播报员们准备就绪</string>
    <string name="dial_specific_resources_missed">语音包被删除，请重新下载</string>
    <string name="dial_specific_status_download">下载</string>
    <string name="dial_specific_status_downloading">正在下载…</string>
    <string name="dial_specific_status_ready">使用</string>
    <string name="dial_specific_status_resume">继续下载</string>
    <string name="dial_specific_status_retry">重试</string>
    <string name="dial_specific_status_selected">正在使用</string>
    <string name="dialog_info_buytone_no_song">当前没有选择歌曲</string>
    <string name="dialog_info_buytone_start_format">好的，马上将%s设为您的彩铃</string>
    <string name="dialog_info_switch_voice">切换到您的声音</string>
    <string name="dialog_recommend_title">抢先体验</string>
    <string name="dialog_recomnend_description">更专业的语音拨号等你来体验</string>
    <string name="dialog_recomnend_description_ext">大小:11.9M\u0009建议在wifi网络下安装</string>
    <string name="dialog_recomnend_left_btn">以后再说</string>
    <string name="dialog_recomnend_right_btn">立即安装</string>
    <string name="download_confirm">确认下载</string>
    <string name="speech_dialog_fresh_content">"试试说:
\"打电话给张三\"
\"打开微信\"
\"把张三的号码发给李四\""</string>
    <string name="speech_dialog_fresh_ok">知道了，马上试试</string>
    <string name="speech_dialog_fresh_title">我是咪咕灵犀</string>
    <string name="sso_str_changepwd">修改登录密码</string>
    <string name="sso_str_entry_he_find_pwd">和通行证忘记密码入口</string>
    <string name="sso_str_findpwd">重置密码</string>
    <string name="sso_str_findpwd_btn">确认</string>
    <string name="sso_str_forget_pwd">忘记密码？</string>
    <string name="sso_str_input_phone">请输入您的手机号</string>
    <string name="sso_str_new_pwd">新密码（6-16位字符）</string>
    <string name="sso_str_next_step">下一步</string>
    <string name="sso_str_ok_btn">确认</string>
    <string name="sso_str_old_pwd">原密码</string>
    <string name="sso_str_register">注册</string>
    <string name="sso_str_register_btn">注册并登录</string>
    <string name="sso_str_register_he_passport">中国移动用户已默认注册和通行证帐号，可直接登录咪咕业务</string>
    <string name="sso_str_register_protocol">《使用协议》</string>
    <string name="sso_str_register_protocol_tip">注册并登录代表已阅读并接受</string>
    <string name="sso_str_register_pwd_edit_hint">密码（6-16位字符）</string>
    <string name="sso_str_register_remind">注册成功后该帐号可以登录所有咪咕业务，包括咪咕音乐、圈圈、阅读、游戏、视频。</string>
    <string name="sso_str_register_smscode_edit_hint">验证码</string>
    <string name="sso_str_register_username_edit_hint">手机号</string>
    <string name="sso_str_update_pwd_edit_hint">新密码（6-16位字符）</string>
    <string name="sso_str_upgrade_account">帐号：</string>
    <string name="sso_str_upgrade_newpwd_hint">新密码（6-16位字符）</string>
    <string name="sso_str_upgrade_tip">尊敬的用户, 请设置您的咪咕帐号密码, 以完成升级操作。</string>
    <string name="sso_str_upgradeuser">帐号升级</string>
    <string name="str_btn_login">登录</string>
    <string name="str_get_smscode">获取验证码</string>
    <string name="str_sms_login">短信登录</string>
    <string name="str_smslogin_username_edit_hint">手机号</string>
    <string name="str_smslogin_voice">收不到短信? 试试</string>
    <string name="str_smslogin_voice_valid">语音验证</string>
    <string name="str_smsmlogin_smscode_edit_hint">验证码</string>
</resources>