<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sso_color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:SsoClearEditText="http://schemas.android.com/apk/res-auto" xmlns:SsoCircleButton="http://schemas.android.com/apk/res-auto" xmlns:TitleBar="http://schemas.android.com/apk/res-auto" xmlns:PasswordEditText="http://schemas.android.com/apk/res-auto">
    <com.cmcc.migusso.sdk.view.TitleBar android:id="@id/sso_register_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" PasswordEditText:sso_title_text="@string/sso_str_register" />
    <com.cmcc.migusso.sdk.view.ClearEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_register_username_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="24.0dip" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/sso_str_register_username_edit_hint" android:maxLength="11" android:inputType="number" android:textCursorDrawable="@drawable/sso_shape_cursor" PasswordEditText:sso_underlineColor="@color/sso_color_maintheme" />
    <RelativeLayout android:id="@id/sso_register_smscode_ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_16dp" android:layout_marginRight="@dimen/dimen_17dp">
        <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_15sp" android:id="@id/sso_register_getsms_btn" android:layout_width="150.0dip" android:layout_height="@dimen/dimen_32dp" android:text="@string/str_get_smscode" android:layout_alignParentRight="true" PasswordEditText:sso_backGroundColor="@color/sso_color_maintheme" PasswordEditText:sso_pressedColor="@color/sso_color_pressed" PasswordEditText:sso_notEnableColor="@color/sso_color_notenable" />
        <com.cmcc.migusso.sdk.view.ClearEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_register_smscode_edt" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_32dp" android:layout_marginRight="@dimen/dimen_26dp" android:hint="@string/sso_str_register_smscode_edit_hint" android:maxLength="6" android:layout_toLeftOf="@id/sso_register_getsms_btn" android:inputType="number" android:textCursorDrawable="@drawable/sso_shape_cursor" PasswordEditText:sso_underlineColor="@color/sso_color_maintheme" />
    </RelativeLayout>
    <com.cmcc.migusso.sdk.view.PasswordEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_register_pwd_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_16dp" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/sso_str_register_pwd_edit_hint" android:maxLength="16" android:textCursorDrawable="@drawable/sso_shape_cursor" PasswordEditText:sso_underline_color="@color/sso_color_maintheme" PasswordEditText:sso_show_left_icon="false" />
    <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_18sp" android:id="@id/sso_register_btn" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_22dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/sso_str_register_btn" PasswordEditText:sso_backGroundColor="@color/sso_color_maintheme" PasswordEditText:sso_pressedColor="@color/sso_color_pressed" PasswordEditText:sso_notEnableColor="@color/sso_color_notenable" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="15.0dip" android:layout_marginRight="@dimen/dimen_17dp">
        <TextView android:textSize="@dimen/dimen_12sp" android:textColor="@color/sso_color_protocol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sso_str_register_protocol_tip" />
        <TextView android:textSize="@dimen/dimen_12sp" android:textColor="@color/main_theme_color" android:id="@id/sso_regiter_protocal_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sso_str_register_protocol" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginRight="@dimen/dimen_17dp">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <TextView android:textSize="@dimen/dimen_12sp" android:textColor="@color/sso_color_a4a4a4" android:gravity="center" android:id="@id/register_tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sso_str_register_remind" />
            <TextView android:textSize="@dimen/dimen_12sp" android:textColor="@color/sso_color_727272" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginBottom="@dimen/dimen_60dp" android:text="@string/sso_str_register_he_passport" android:layout_below="@id/register_tips" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>