<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sso_color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:SsoClearEditText="http://schemas.android.com/apk/res-auto" xmlns:SsoCircleButton="http://schemas.android.com/apk/res-auto" xmlns:TitleBar="http://schemas.android.com/apk/res-auto">
    <com.cmcc.migusso.sdk.view.TitleBar android:id="@id/sso_smslogin_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" TitleBar:sso_title_text="@string/str_sms_login" />
    <com.cmcc.migusso.sdk.view.ClearEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_smslogin_username_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="25.0dip" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/str_smslogin_username_edit_hint" android:maxLength="11" android:inputType="number" android:textCursorDrawable="@drawable/sso_shape_cursor" TitleBar:sso_underlineColor="@color/sso_color_maintheme" />
    <RelativeLayout android:id="@id/sso_smslogin_smscode_ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_18dp" android:layout_marginRight="@dimen/dimen_17dp">
        <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_15sp" android:id="@id/sso_smsmlogin_getsms_btn" android:layout_width="150.0dip" android:layout_height="@dimen/dimen_32dp" android:text="@string/str_get_smscode" android:layout_alignParentRight="true" TitleBar:sso_backGroundColor="@color/sso_color_maintheme" TitleBar:sso_pressedColor="@color/sso_color_pressed" TitleBar:sso_notEnableColor="@color/sso_color_notenable" />
        <com.cmcc.migusso.sdk.view.ClearEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_smslogin_smscode_edt" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_32dp" android:layout_marginRight="@dimen/dimen_26dp" android:hint="@string/str_smsmlogin_smscode_edit_hint" android:maxLength="6" android:layout_toLeftOf="@id/sso_smsmlogin_getsms_btn" android:inputType="number" android:textCursorDrawable="@drawable/sso_shape_cursor" TitleBar:sso_underlineColor="@color/sso_color_maintheme" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/sso_smslogin_voice_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_23dp">
        <TextView android:textSize="@dimen/dimen_12sp" android:textColor="@color/sso_color_727272" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_smslogin_voice" />
        <TextView android:textSize="@dimen/dimen_12sp" android:textColor="@drawable/selector_ivr_text_color" android:id="@id/sso_smslogin_voice_valid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_smslogin_voice_valid" />
    </LinearLayout>
    <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_18sp" android:id="@id/sso_smsmlogin_login_btn" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_23dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/str_btn_login" TitleBar:sso_backGroundColor="@color/sso_color_maintheme" TitleBar:sso_pressedColor="@color/sso_color_pressed" TitleBar:sso_notEnableColor="@color/sso_color_notenable" />
</LinearLayout>