<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sso_color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:PasswordEditText="http://schemas.android.com/apk/res-auto" xmlns:SsoCircleButton="http://schemas.android.com/apk/res-auto" xmlns:SsoClearEditText="http://schemas.android.com/apk/res-auto" xmlns:TitleBar="http://schemas.android.com/apk/res-auto">
    <com.cmcc.migusso.sdk.view.TitleBar android:id="@id/sso_findpwd_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" TitleBar:sso_title_text="@string/sso_str_findpwd" />
    <com.cmcc.migusso.sdk.view.ClearEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_findpwd_username_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="24.0dip" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/sso_str_register_username_edit_hint" android:maxLength="11" android:inputType="number" android:textCursorDrawable="@drawable/sso_shape_cursor" TitleBar:sso_underlineColor="@color/sso_color_maintheme" />
    <RelativeLayout android:id="@id/sso_findpwd_smscode_ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_18dp" android:layout_marginRight="@dimen/dimen_17dp">
        <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_15sp" android:id="@id/sso_findpwd_getsms_btn" android:layout_width="150.0dip" android:layout_height="@dimen/dimen_32dp" android:text="@string/str_get_smscode" android:layout_alignParentRight="true" TitleBar:sso_backGroundColor="@color/sso_color_maintheme" TitleBar:sso_pressedColor="@color/sso_color_pressed" TitleBar:sso_notEnableColor="@color/sso_color_notenable" />
        <com.cmcc.migusso.sdk.view.ClearEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_findpwd_smscode_edt" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_32dp" android:layout_marginRight="@dimen/dimen_26dp" android:hint="@string/sso_str_register_smscode_edit_hint" android:maxLength="6" android:layout_toLeftOf="@id/sso_findpwd_getsms_btn" android:inputType="number" android:textCursorDrawable="@drawable/sso_shape_cursor" TitleBar:sso_underlineColor="@color/sso_color_maintheme" />
    </RelativeLayout>
    <com.cmcc.migusso.sdk.view.PasswordEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_findpwd_pwd_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_18dp" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/sso_str_update_pwd_edit_hint" android:maxLength="16" android:textCursorDrawable="@drawable/sso_shape_cursor" TitleBar:sso_underline_color="@color/sso_color_maintheme" />
    <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_18sp" android:id="@id/sso_findpwd_btn" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_22dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/sso_str_findpwd_btn" TitleBar:sso_backGroundColor="@color/sso_color_maintheme" TitleBar:sso_pressedColor="@color/sso_color_pressed" TitleBar:sso_notEnableColor="@color/sso_color_notenable" />
    <TextView android:textSize="15.0sp" android:textColor="@color/sso_color_maintheme" android:gravity="left" android:layout_gravity="right" android:id="@id/sso_findpwd_entry_he2_tv" android:padding="0.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_15dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/sso_str_entry_he_find_pwd" />
</LinearLayout>