<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sso_color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:SsoCircleButton="http://schemas.android.com/apk/res-auto" xmlns:TitleBar="http://schemas.android.com/apk/res-auto" xmlns:PasswordEditText="http://schemas.android.com/apk/res-auto">
    <com.cmcc.migusso.sdk.view.TitleBar android:id="@id/sso_changepwd_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" PasswordEditText:sso_title_text="@string/sso_str_changepwd" />
    <com.cmcc.migusso.sdk.view.PasswordEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_changepwd_oldpwd_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="24.0dip" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/sso_str_old_pwd" android:maxLength="11" android:textCursorDrawable="@drawable/sso_shape_cursor" PasswordEditText:sso_underline_color="@color/sso_color_maintheme" />
    <com.cmcc.migusso.sdk.view.PasswordEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_changepwd_newpwd_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_32dp" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/sso_str_new_pwd" android:maxLength="16" android:textCursorDrawable="@drawable/sso_shape_cursor" PasswordEditText:sso_underline_color="@color/sso_color_maintheme" />
    <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_18sp" android:id="@id/sso_changepwd_okbtn" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_22dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/sso_str_ok_btn" PasswordEditText:sso_backGroundColor="@color/sso_color_maintheme" PasswordEditText:sso_pressedColor="@color/sso_color_pressed" PasswordEditText:sso_notEnableColor="@color/sso_color_notenable" />
    <TextView android:textSize="15.0sp" android:textColor="@color/sso_color_maintheme" android:gravity="right" android:layout_gravity="right" android:id="@id/sso_changepwd_gofindpwd_tv" android:padding="0.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_15dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/sso_str_forget_pwd" />
</LinearLayout>