<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sso_color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:SsoClearEditText="http://schemas.android.com/apk/res-auto" xmlns:SsoCircleButton="http://schemas.android.com/apk/res-auto" xmlns:TitleBar="http://schemas.android.com/apk/res-auto" xmlns:TopTipView="http://schemas.android.com/apk/res-auto">
    <com.cmcc.migusso.sdk.view.TitleBar android:id="@id/sso_upgrade_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" TopTipView:sso_title_text="@string/sso_str_upgradeuser" />
    <com.cmcc.migusso.sdk.view.TopTipView android:layout_width="fill_parent" android:layout_height="wrap_content" TopTipView:tip_msg="@string/sso_str_input_phone" />
    <com.cmcc.migusso.sdk.view.ClearEditText android:textSize="@dimen/dimen_15sp" android:id="@id/edt_abc_check_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="12.0dip" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/str_smslogin_username_edit_hint" android:maxLength="11" android:inputType="phone" android:textCursorDrawable="@drawable/sso_shape_cursor" TopTipView:sso_underlineColor="@color/sso_color_maintheme" />
    <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_18sp" android:id="@id/cb_abc_check_next" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_22dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/sso_str_next_step" TopTipView:sso_backGroundColor="@color/sso_color_maintheme" TopTipView:sso_pressedColor="@color/sso_color_pressed" TopTipView:sso_notEnableColor="@color/sso_color_notenable" />
</LinearLayout>