<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sso_color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:SsoClearEditText="http://schemas.android.com/apk/res-auto" xmlns:SsoCircleButton="http://schemas.android.com/apk/res-auto" xmlns:TitleBar="http://schemas.android.com/apk/res-auto" xmlns:PasswordEditText="http://schemas.android.com/apk/res-auto" xmlns:TopTipView="http://schemas.android.com/apk/res-auto">
    <com.cmcc.migusso.sdk.view.TitleBar android:id="@id/sso_upgrade_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" TopTipView:sso_title_text="@string/sso_str_upgradeuser" />
    <com.cmcc.migusso.sdk.view.TopTipView android:layout_width="fill_parent" android:layout_height="wrap_content" TopTipView:tip_msg="@string/sso_str_upgrade_tip" />
    <LinearLayout android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_15dp" android:layout_marginRight="@dimen/dimen_17dp">
        <TextView android:textSize="@dimen/dimen_15sp" android:textColor="@color/sso_color_black" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sso_str_upgrade_account" />
        <TextView android:textSize="@dimen/dimen_15sp" android:textColor="@color/sso_color_333333" android:id="@id/sso_upgrade_user_tv" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    </LinearLayout>
    <com.cmcc.migusso.sdk.view.PasswordEditText android:textSize="@dimen/dimen_15sp" android:id="@id/sso_upgrade_newpwd_edt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="12.0dip" android:layout_marginRight="@dimen/dimen_17dp" android:hint="@string/sso_str_upgrade_newpwd_hint" android:textCursorDrawable="@drawable/sso_shape_cursor" TopTipView:sso_underline_color="@color/sso_color_maintheme" />
    <com.cmcc.migusso.sdk.view.CircleButton android:textSize="@dimen/dimen_18sp" android:id="@id/sso_upgrade_btn" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:layout_marginLeft="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_22dp" android:layout_marginRight="@dimen/dimen_17dp" android:text="@string/sso_str_findpwd_btn" TopTipView:sso_backGroundColor="@color/sso_color_maintheme" TopTipView:sso_pressedColor="@color/sso_color_pressed" TopTipView:sso_notEnableColor="@color/sso_color_notenable" />
</LinearLayout>