<?xml version="1.0" encoding="utf-8"?>
<com.iflytek.base.skin.customView.XLinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/dlg_layout" android:background="@drawable/shape_speech_dialog_fresh_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:skin="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/dlg_body" android:paddingTop="35.0dip" android:paddingBottom="10.0dip" android:layout_width="@dimen/dlg_body_layout_width" android:layout_height="wrap_content" skin:layout_width="660">
        <com.iflytek.base.skin.customView.XTextView android:textSize="20.0sp" android:textColor="#ff515151" android:ellipsize="end" android:gravity="center" android:id="@id/tv_speech_dialog_fresh_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speech_dialog_fresh_title" android:singleLine="true" android:includeFontPadding="false" />
        <com.iflytek.base.skin.customView.XTextView android:textSize="16.0sp" android:textColor="#ff515151" android:gravity="center_horizontal" android:id="@id/tv_speech_dialog_fresh_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/speech_dialog_fresh_content" android:includeFontPadding="false" android:lineSpacingExtra="16.0sp" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/dlg_foot_bar" android:layout_width="fill_parent" android:layout_height="@dimen/dlg_foot_bar_layout_height" skin:layout_height="110">
        <View android:background="#ffd1d1d1" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <com.iflytek.base.skin.customView.XButton android:textSize="16.0sp" android:textColor="#ff4282f7" android:gravity="center" android:id="@id/btn_speech_dialog_fresh_ok" android:background="@drawable/sl_speech_dialog_fresh_ok_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/speech_dialog_fresh_ok" skin:paddingBottom="8" />
    </LinearLayout>
</com.iflytek.base.skin.customView.XLinearLayout>